environments/testbranch-testteam-1/aap-instance/base/controller_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
    argocd.argoproj.io/sync-wave: "4"
  name: testbranch-testteam-1-controller
  labels:
    app.kubernetes.io/component: automationcontroller
    app.kubernetes.io/managed-by: automationcontroller-operator
    app.kubernetes.io/operator-version: ''
    app.kubernetes.io/part-of: testbranch-testteam-1-controller
spec:
  host: testteam-controller-1.apps.cluster-8hfnw.8hfnw.sandbox2417.opentlc.com
  to:
    kind: Service
    name: testbranch-testteam-1-controller-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
