environments/testbranch-testteam-1/aap-instance/base/eda_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
    argocd.argoproj.io/sync-wave: "4"
  name: testbranch-testteam-1-eda
  labels:
    app.kubernetes.io/managed-by: eda-operator
    app.kubernetes.io/part-of: testbranch-testteam-1-eda
    app.kubernetes.io/name: testbranch-testteam-1-eda
    app.kubernetes.io/operator-version: '2.4'
    app.kubernetes.io/instance: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
spec:
  host: testteam-eda-1.apps.cluster-ljlsm.ljlsm.sandbox1851.opentlc.com
  to:
    kind: Service
    name: testbranch-testteam-1-eda-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
